# amech-dev

./: .gitignore  LICENSE  README.md  build.sh  download.sh  install.sh  mamba.yml  pixi.toml  pyproject.toml  status.sh  update.sh
.github/workflows/: signed.yaml  test.yaml  test_other.yaml  test_prompt.yaml
.recipe/: recipe.yaml
examples/propyl/inp/: species.csv
scripts/: amech.sh  build.sh  download.sh  git.sh  install.sh  node.sh  status.sh  subtasks.sh  test.py  update.sh  x2z.py
src/: .gitignore
src/automech-toolbox/: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
src/automech-toolbox/.recipe/: recipe.yaml
src/automech-toolbox/MESS/: CMakeLists.txt  README.md  build.sh
src/automech-toolbox/PAC99/: CMakeLists.txt  README.md
src/automech-toolbox/PAC99/examples/ch4/: CH4.c97  CH4.o97  run_pac99.sh
src/automech-toolbox/PAC99/examples/co/: CO.c97  CO.i97  CO.o97  run_pac99.sh
src/automech-toolbox/PAC99/examples/h2/: H2.c97  H2.i97  H2.o97  run_pac99.sh
src/automech-toolbox/ProjRot/: CMakeLists.txt  README.md
src/automech-toolbox/ProjRot/examples/reaction_path/1_Internal/: Cart_displ.txt  VaG.txt
src/automech-toolbox/ProjRot/examples/reaction_path/2_Cartesian/: Cart_displ.txt  VaG.txt  trajec.xyz
src/automech-toolbox/ProjRot/examples/rotor/: README
src/automech-toolbox/ProjRot/src/: main.c
src/automech-toolbox/ThermP/: CMakeLists.txt  README.md
src/automech-toolbox/ThermP/examples/c2h6/: C2H6.i97  fort.26
src/automech-toolbox/ThermP/src/: Thermp.f
tests/: .gitignore  config.yaml  test_automech.py
tests/quick/: save.tgz  subtasks.tgz
